Bug 698881 - Problem with spot color with same name of master color (CMJK)
Summary: Problem with spot color with same name of master color (CMJK)
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Other Driver (show other bugs)
Version: 9.22
Hardware: PC Windows NT
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-22 01:09 UTC by seb
Modified: 2021-10-11 14:48 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
double yellow in a file (121.10 KB, image/jpeg)
2018-01-23 01:13 UTC, seb
Details
yellow problem (789.17 KB, application/pdf)
2018-01-23 05:32 UTC, seb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description seb 2018-01-22 01:09:57 UTC
Hello.
I have a (simple) problem with tiffsep ouput device driver :
I have a PDF with standard CMJK color + spots colors. 
On of these spot color is named 'Yellow' and interact with master Yellow (of CMJK). 
The result is a bad Yellow Tiff file (not openable with photoshop).
Can you correct this ?
Thank you
Comment 1 Ken Sharp 2018-01-22 01:17:05 UTC
(In reply to seb from comment #0)
> Hello.
> I have a (simple) problem with tiffsep ouput device driver :
> I have a PDF with standard CMJK color + spots colors. 
> On of these spot color is named 'Yellow' and interact with master Yellow (of
> CMJK). 

I don't know what you mean here. If you have a spot colour of 'Yellow' then that is not a spot colour, it is the process colour 'Yellow'. You can't have two colourants with the same name.


> The result is a bad Yellow Tiff file (not openable with photoshop).
> Can you correct this ?

You have not supplied an example file or command line for us to look at, without both of those there is nothing we can do to help you.
Comment 2 seb 2018-01-23 01:13:23 UTC
Created attachment 14626 [details]
double yellow in a file
Comment 3 seb 2018-01-23 01:14:33 UTC
My problem is simple :
I have one yellow process color + one yellow spot channel with same name ("Yellow") so generation of Tiff separation file result in bad Yellow file.
Comment 4 Ken Sharp 2018-01-23 01:25:40 UTC
(In reply to seb from comment #2)
> Created attachment 14626 [details]
> double yellow in a file

Sending me a screenshot of the Acrobat display is not useful. I need the *input* file, the file you sent to Ghostscript for rendering.


(In reply to seb from comment #3)
> My problem is simple :
> I have one yellow process color + one yellow spot channel with same name
> ("Yellow") so generation of Tiff separation file result in bad Yellow file.

Actually, no you don't. You have one process plate called 'Yellow' and one spot plate called 'YELLOW'. Names are case sensitive, so these are not the same. Unfortunately Windows filenames are not case sensitive, so I imagine the problem is that one file has overwritten the other.

You need to attach here, the original input file (which I assume is a PDF file) and tell us the command line you used with Ghostscript. Then we can look into it. Without that, we can't.
Comment 5 seb 2018-01-23 05:32:18 UTC
Created attachment 14628 [details]
yellow problem

I can't provide the original file for copyright purpose but i have generate you a similar file.
Effectly i'm under windows so Yellow and YELLOW is the same thing.
ps : my problem is resolved because i use psd file instead of tiff files.
ps2 : -dDownScaleFactor if absolutly not working with psd or tiff files in high resolution mode
BR
Comment 6 Ken Sharp 2018-01-23 05:51:15 UTC
(In reply to seb from comment #5)
> Created attachment 14628 [details]
> yellow problem
> 
> I can't provide the original file for copyright purpose but i have generate
> you a similar file.

Any file which reproduces the problem is, of course, completely acceptable.

You still haven't given me the command line you are using though.

I'll talk it over with people here, but I rather doubt there is much that can be done about this. Possibly we could permit an option to use something other than the ink name for the individual files. Basically, using a spot name which is the same (excepting capitalisation) as a process colour name is not a smart move.


> Effectly i'm under windows so Yellow and YELLOW is the same thing.
> ps : my problem is resolved because i use psd file instead of tiff files.
> ps2 : -dDownScaleFactor if absolutly not working with psd or tiff files in
> high resolution mode
> BR

DownScaleFactor isn't supported by the standard TIFF devices (tiff24nc, tiff32nc etc), there are equivalent tiffscaled* devices instead. You can use the tiffscaled devices, the tiffsep devices or the png devices.

As far as I can see it is supported by the PSD devices, if you think it isn't working then you should open a new bug report for it. Don't forget to supply an example file and a command line to reproduce the problem
Comment 7 Peter Cherepanov 2020-07-09 19:52:30 UTC
It is easy to modify create_separation_file_name() to add a separation number to the file name on MS Windows. Linux version can do the same for consistency.
Comment 8 Ken Sharp 2021-10-11 14:48:34 UTC
commit a9fa064fffd027ce8f7c244d86a0a27dcf85f961 adds the spot number to the spot ink name if it matches (case insensitively) any process ink name.